# docs/swagger.json
@@ -8,7 +8,8 @@
     "host": "blood-link-be.onrender.com",
     "basePath": "/api",
     "schemes": [
-        "https", "http"
+        "https",
+        "http"
     ],
     "paths": {
         "/user/signup": {
@@ -136,37 +137,317 @@
                 }
             }
         },
-        "/user/logout":{
+        "/user/logout": {
             "get": {
                 "summary": "User logout",
                 "description": "The user is now allowed to log out from his or her account on Blood LInk",
-                "tags":["User"],
+                "tags": [
+                    "User"
+                ],
                 "responses": {
-                  "200": {
-                    "description": "successfully logged out from your account",
-                    "content": {
-                      "application/json": {
-                        "schema": {
-                          "type": "array"
+                    "200": {
+                        "description": "successfully logged out from your account",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
                         }
-                      }
+                    },
+                    "404": {
+                        "description": "No Pets found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
-                  },
-                  "404": {
-                    "description": "No Pets found"
-                  },
-                  "500": {
-                    "description": "Internal server error"
-                  }
                 }
-            }      
+            }
+        },
+        "/hospital/add": {
+            "post": {
+                "summary": "Add a hospital",
+                "description": "The hospital is added in the database for blood link services",
+                "tags": [
+                    "Hoppital"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/hospital"
+                        },
+                        "required": true,
+                        "description": "Enter the new hospital details"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/hospital/delete/{name}": {
+            "post": {
+                "summary": "Delete a hospital",
+                "description": "The hospital is removed in the database for blood link services after being deleted!",
+                "tags": [
+                    "Hoppital"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/delHospital"
+                        },
+                        "required": true,
+                        "description": "Enter the name of the hospital to be deleted."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/hospital/list": {
+            "get": {
+                "summary": "List of all hospitals",
+                "description": "Retrieves a list of all hospitals which are invloved in the services of Blood Link project",
+                "tags": [
+                    "Hoppital"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully retrieved the list of all hospitals",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Hospital not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/hospital/update": {
+            "put": {
+                "summary": "Update a hospital",
+                "description": "The hospital information is updated here",
+                "tags": [
+                    "Hoppital"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the hospital to update",
+                        "required": true,
+                        "schema": {
+                          "type": "string"
+                        }
+                      },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/hospital"
+                        },
+                        "required": true,
+                        "description": "Update the hospital details"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/hospital/bloodRequest": {
+            "post": {
+                "summary": "The hospital request emergency blood",
+                "description": "The hospital request emergency blood and specifies what blood type they are in need of",
+                "tags": [
+                    "Hoppital"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/request"
+                        },
+                        "required": true,
+                        "description": "Enter the new hospital details"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/hospital/listOfBloodRequest": {
+            "get": {
+                "summary": "List of all hospit",
+                "description": "Retrieves a list of all hospitals which are invloved in the services of Blood Link project",
+                "tags": [
+                    "Hoppital"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully retrieved the list of all hospitals",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Hospital not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/hospital/approveRequest/{id}":{
+                "get": {
+                    "summary": "Blood request approval",
+                    "description": "The administrator approves the hospital blood request usign the request id",
+                    "tags": [
+                        "Hoppital"
+                    ],
+                    "responses": {
+                        "200": {
+                            "description": "successful",
+                            "content": {
+                                "application/json": {
+                                    "schema": {
+                                        "type": "array"
+                                    }
+                                }
+                            }
+                        },
+                        "404": {
+                            "description": "blood request not found"
+                        },
+                        "500": {
+                            "description": "Internal server error"
+                        }
+                    }
+                }
+
+        },
+        "/hospital/namesOfAllHospitals": {
+            "get": {
+                "summary": "List of all hospit",
+                "description": "Retrieves a list of names of all hospitals which are invloved in the services of Blood Link project",
+                "tags": [
+                    "Hoppital"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully retrieved the list of names of all hospitals",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Hospital not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/donor/createAppointments":{
+            "post": {
+                "summary": "Add an appointment",
+                "description": "Thedonor books an appointment",
+                "tags": [
+                    "Donor"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/donor"
+                        },
+                        "required": true,
+                        "description": "Enter appointment donor details"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/donor/getAppointments": {
+            "get": {
+                "summary": "List of all appointments",
+                "description": "Retrieves a list of all appointments invloved in the services of Blood Link project",
+                "tags": [
+                    "Donor"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully retrieved the list of all appointments",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "appointment not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
         }
-      
+
     },
     "tags": [
         {
-          "name": "User",
-          "description": "The administration institution in control of the blood link services and systems"
+            "name": "User",
+            "description": "Authentication and authorization of Blood Link users"
+        },
+        {
+            "name": "Hospital",
+            "description": "Functionalities to be carried out on hospitals"
+        },
+        {
+            "name": "Donor",
+            "description": "The donator"
         }
     ],
     "definitions": {
@@ -176,16 +457,16 @@
                 "username": {
                     "type": "string",
                     "required": true,
-                    "description":"The name of the user"
+                    "description": "The name of the user"
                 },
                 "email": {
                     "type": "string",
-                    "description":"Tbe email of the user",
+                    "description": "Tbe email of the user",
                     "required": true
                 },
                 "password": {
                     "type": "string",
-                    "description":"The password to be used while logging in"
+                    "description": "The password to be used while logging in"
                 }
             }
         },
@@ -208,7 +489,7 @@
             "properties": {
                 "otp": {
                     "Type": "string",
-                    "requered": true,
+                    "required": true,
                     "description": "The otp which was swent to the user email"
                 }
             }
@@ -228,6 +509,149 @@
                 "password": {
                     "type": "string",
                     "required": true
+                }
+            }
+        },
+        "hospital": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "required": true
+                },
+                "hospitalCode": {
+                    "type": "string",
+                    "required": true
+                },
+                "email": {
+                    "type": "string",
+                    "required": true,
+                    "default": "@gmail.com"
+                },
+                "phone": {
+                    "type": "string",
+                    "required": true
+                },
+                "province": {
+                    "type": "string",
+                    "required": true
+                },
+                "district": {
+                    "type": "string",
+                    "required": true
+                },
+                "sector": {
+                    "type": "string",
+                    "required": true
+                }
+            }
+        },
+        "delHospital": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "donor":{
+            "type":"object",
+            "properties":{
+                "fullName":{
+                    "type": "string",
+                    "required":true
+                },
+                "mobileNumber":{
+                    "type": "string",
+                    "required":true
+                },
+                "email":{
+                    "type":"string",
+                    "required":true,
+                    "default":"@gmail.com"
+                },
+                "nationalID":{
+                    "type": "string",
+                    "required":true
+                },
+                "province":{
+                    "type": "string",
+                    "required":true
+                },
+                "district":{
+                    "type": "string",
+                    "required":true
+                },
+                "sector":{
+                    "type": "string",
+                    "required":true
+                },
+                "age":{
+                    "type": "string",
+                    "required":true
+                },
+                "gender":{
+                    "type": "string",
+                    "required":true,
+                    "enum": ["male", "female", "other"]
+                },
+                "bloodGroup":{
+                    "type": "string",
+                    "required":true,
+                    "enum": [
+                        "A+",
+                        "A-",
+                        "O+",
+                        "O-",
+                        "B+",
+                        "B-",
+                        "AB+",
+                        "AB-"
+                    ]
+                },
+                "donationHospital":{
+                    "type":"string"
+                }
+            }
+        },
+        "request": {
+            "type": "object",
+            "properties": {
+                "hospital": {
+                    "type": "string",
+                    "description": "The hospital id which is requesting the emergency blood request",
+                    "required": true
+                },
+                "emergencyBloodType": {
+                    "type": "string",
+                    "description": "The blood type that is being requested by the hospital",
+                    "required": true,
+                    "enum": [
+                        "A+",
+                        "A-",
+                        "O+",
+                        "O-",
+                        "B+",
+                        "B-",
+                        "AB+",
+                        "AB-"
+                    ],
+                    "default": "O+"
+                },
+                "quantity": {
+                    "type":"integer",
+                    "required":true
+                },
+                "status":{
+                    "type":"string",
+                    "required":true,
+                    "enum":[
+                        "Sent",
+                        "Pending",
+                        "Matched",
+                        "Fulfilled"
+                    ],
+                    "default":"Sent"
                 }
             }
         }
