# routes/hospital.route.js
@@ -11,16 +11,17 @@ import {
     getHospitalById, getHospitalByName,
     getHospitalByProvince,
     getHospitalByStatus,
-    getHospitalBySector
+    getHospitalBySector,
+    listHospitals
 } from "../controllers/hospital.controller.js";
 import { hospitalValidation } from '../utils/validation.js';
-import { requestBlood, viewAllRequests } from '../controllers/blood.request.js';
+import { requestBlood, viewAllRequests, approveRequest} from '../controllers/blood.request.js';
 
 
 export const hospitalRoute = express.Router();
 
 hospitalRoute.post('/register', hospitalValidation, hospitalRegister)
-hospitalRoute.delete('/delete/:id', deleteHospital);
+hospitalRoute.delete('/delete/:name', deleteHospital);
 hospitalRoute.get('/list', allHospitals)
 hospitalRoute.post('/add', hospitalValidation, addHospital)
 hospitalRoute.post('/login', login)
@@ -34,3 +35,5 @@ hospitalRoute.get('/getHospitalBySector/:sector', getHospitalBySector)
 hospitalRoute.get('/getHospitalById/:id', getHospitalById)
 hospitalRoute.post('/bloodRequest', requestBlood)
 hospitalRoute.get('/listOfBloodRequest', viewAllRequests)
+hospitalRoute.get('/approveRequest/:id', approveRequest)
+hospitalRoute.get('/namesOfAllHospitals', listHospitals)
